style.css
body {
  background: white;
  padding: 20px;
  font-family: sans-serif;
}

h1 {
font-family: 'Turret Road', cursive;
  font-size: 52px;
  margin-bottom: 10px;
}

h2 {
font-family: 'New Rocker', cursive;
padding:0;
margin:0;
}

h2.database-header {
  font-family: sans-serif;
  margin-bottom:10px;
}

p {
  font-family: sans-serif;
  padding:0;
  margin-top:10px;
}

p.legend {
  size=20px;
}

@media (min-width: 800px) {
 div.hide, div.map, div.table, div.odds-ends p.legend {
    width: 70%;
  }
}

div.top {
  width:80%;
}

div.hide {
  background: #FCF5E5;
  padding: 10px;
  position: absolute;
}

div.hide::after {
  content: "";
  position: absolute;
  top: 100%;
  height: 20px;
  width: 100%;
  left: 0;
  background: url(https://raw.githubusercontent.com/mazdun/Threats-Elected-Officials/8c091137a7f19c0d05a964cbf6dd2afc7a549798/svg/paper_image_parchment.svg) bottom;
  background-size: 200%;
}

.highlighted.blue {
  background-image: linear-gradient(to top, #82AE9A 30%, transparent 0);
}

.highlighted.red {
  background-image: linear-gradient(to top, #E49569 30%, transparent 0);
}

.highlighted.gray {
  background-image: linear-gradient(to top, #C0C4BF 30%, transparent 0);
}

table { border: 1px ; border-collapse: collapse; min-width:400px}

        th, td { padding: 2px 5px; border: 0.5px solid #CECDCC; }

        thead { background: #FCF5E5; }

        table#demo2.js-sort-0 tbody tr td:nth-child(1),
        table#demo2.js-sort-1 tbody tr td:nth-child(2),
        table#demo2.js-sort-2 tbody tr td:nth-child(3),
        table#demo2.js-sort-3 tbody tr td:nth-child(4),
        table#demo2.js-sort-4 tbody tr td:nth-child(5),
        table#demo2.js-sort-5 tbody tr td:nth-child(6),
        table#demo2.js-sort-6 tbody tr td:nth-child(7),
        table#demo2.js-sort-7 tbody tr td:nth-child(8),
        table#demo2.js-sort-8 tbody tr td:nth-child(9),
        table#demo2.js-sort-9 tbody tr td:nth-child(10) {
            background: #dee;
        }

